--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.2.8",
+    "array-move": "^4.0.0",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.11",
