--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.21",
     "vue": "^3.0.0",
     "vue-router": "^4.0.14",
+    "vuedraggable": "next",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
