--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.11",
+    "hotkeys-js": "^3.10.1",
     "kpzc-lego-components": "^1.0.4",
     "lodash-es": "^4.17.21",
     "vue": "^3.0.0",
