--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.0",
     "ant-design-vue": "^2.2.8",
     "array-move": "^4.0.0",
     "axios": "^0.26.1",
@@ -19,6 +20,7 @@
     "kpzc-lego-components": "^1.0.4",
     "lodash-es": "^4.17.21",
     "path-to-regexp": "^6.2.1",
+    "qrcode": "^1.5.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.14",
     "vuedraggable": "next",
