--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^2.2.8",
     "array-move": "^4.0.0",
     "axios": "^0.26.1",
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.11",
     "hotkeys-js": "^3.10.1",
