--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.11",
+    "file-saver": "^2.0.5",
     "hotkeys-js": "^3.10.1",
     "html2canvas": "^1.4.1",
     "kpzc-lego-components": "^1.0.4",
@@ -28,6 +29,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.4",
