--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:staging": "vue-cli-service build --mode staging",
+    "build:analyze": "vue-cli-service build --mode analyze",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -57,6 +58,7 @@
     "sass-loader": "^10.2.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.3.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webpack-bundle-analyzer": "^4.7.0"
   }
 }
